--- a/style.css
+++ b/style.css
@@ -2,6 +2,31 @@
     box-sizing: border-box;
     padding:0;
     margin:0;
+    border: 1px solid black
 }
 
+nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 10px;
+}
 
+.lista1{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.lista2{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.lista1 li,.lista2 li{
+    list-style-type: none;
+}
+
+.lista1 ul,.lista2 ul{
+ gap:20px;
+}
