--- a/style.css
+++ b/style.css
@@ -154,6 +154,28 @@ flex-wrap: wrap;
 
 
 
+.sezione6{
+    height: 400px;
+    background-color:rgba(180, 208, 231, 1) ;
+}
+
+.main-container6{
+    display: flex;
+    height: 100%;
+}
+.B1{
+    flex-grow: 1;
+}
+.B2{
+    flex-grow: 1;
+}
+
+.main-container7{
+    margin-top: 200px;
+    background-color: lightskyblue;
+    height: 400px;
+}
+
 
 
 
