--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav{
  /* NAVBAR END */
 
  .header-container{
-    max-width: 1300px;
+    max-width: 1200px;
     padding-top: 50px;
     padding-bottom: 50px;
     margin-left: auto;
@@ -79,7 +79,7 @@ nav{
 
 /*MAIN START*/
 .main-container1,.main-container2,.main-container3,.main-container4,.main-container6,.main-container7{
- max-width: 1200px;
+ max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
 
@@ -164,10 +164,17 @@ flex-wrap: wrap;
 .div1,.div3{
     display: flex;
     flex-wrap: wrap;
+    align-self: auto;
+}
+
+.div2{
+    overflow:scroll;
 }
 
 .div1 div{
     width:calc(100% /2);
+   
+
 }
 
 .div1 div:nth-child(odd){
@@ -229,7 +236,7 @@ footer *{
 
 .footer-container{
     margin-top: 100px;
-    max-width: 1300px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
 }
