--- a/style.css
+++ b/style.css
@@ -29,9 +29,19 @@ nav{
     align-items: center;
     gap: 20px;
 }
+.lista2 button{
+    padding: 5px 10px;
+    background-color: rgba(0, 97, 255, 1);
+    color: white;
+}
 
 .lista1 li,.lista2 li{
     list-style-type: none;
+}
+
+.lista1 a,.lista2 a{
+    text-decoration: none;
+    color: black;
 }
 
 .lista1 ul,.lista2 ul{
@@ -103,6 +113,7 @@ main section{
 .column1,.column2,.column3{
     background-color: lightpink;
 }
+
 
 .row{
     background-color: lightpink;  
