--- a/style.css
+++ b/style.css
@@ -57,32 +57,48 @@ nav{
     margin-right: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+   /* align-items: center;*/
  }
 
  .titolo{
-    width: 500px;
+    width: 100%;
     height: auto;
-    margin-bottom: 40px;
-    background-color: lightcoral;
-
+    margin-top: 50px;
+    font-size: 46px;
  }
 
  .hero{
+    position: relative;
+    top:120px;
     display: flex;
     width: 100%;  
  }
 
  .pink{
-    flex-grow: 1;
-    height: 400px;
-    background-color: lightpink;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap:40px;
  }
+ .pink button{
+    padding: 10px 10px;
+    background-color: rgba(0, 97, 255, 1);
+    color: white;
+ }
+
+ .pink i{
+    margin-top: 40px;
+    font-size: 40px;
+ }
+
  .blue{
-    flex-grow: 1;
-    height: 400px;
-    background-color: lightskyblue;
- }                                                                                
+    width: 70%;
+ } 
+ 
+ .blue img{
+    width: 100%;
+ }
 
  /* HEADER END */ 
 
