--- a/style.css
+++ b/style.css
@@ -185,13 +185,13 @@ flex-wrap: wrap;
 }
 
  .div1,.div2,.div3{
-    flex-grow: 1;
+    width:calc(100vw / 3);
+    height:calc(100vh / 3);
 }
 
 .div1,.div3{
     display: flex;
     flex-wrap: wrap;
-    align-self: auto;
 }
 
 .div2{
@@ -200,10 +200,16 @@ flex-wrap: wrap;
 
 .div1 div{
     width:calc(100% /2);
-   
-
+}
+.div1 img{
+    width: 100%;
+    height: 100%;
 }
 
+.div3 img{
+    width: 100%;
+    height: 100%;
+}
 .div1 div:nth-child(odd){
     background-color: lightpink;
 }
