--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ main section{
 }
 
 .main-container2{
-    margin-top: 300px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -182,15 +182,30 @@ main section{
 
 
 .box1{
-    height: 400px;
-    flex-grow: 1;
-   background-color: pink; 
+    width: 60%;
+}
+.box1 img{
+    width: 100%;
 }
 
-.box2{
-    height:400px ;
-    flex-grow: 1;
-    background-color: lightskyblue;
+.box2{ 
+    width:40%;
+    height:calc(100vh - 40vh);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.box2 strong{
+    font-size: 20px;
+}
+
+.box2 button{
+    padding: 10px 10px;
+    background-color: white;
 }
 
 .main-container3{
