--- a/style.css
+++ b/style.css
@@ -215,17 +215,25 @@ main section{
 
 .B-container{
 margin-top: 20px;
-background-color: aquamarine;
 display: flex;
 flex-wrap: wrap;   
 }
 
-.b{
-    height: 200px;
+.b{  
     width: calc(100% /3);
-    background-color: lightblue;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; 
+    padding: 20px; 
 } 
+
+.b img{
+width: 100%;
+}
+
+.b strong{
+font-size: 20px;
+}
 
 .main-container4{
     margin-top: 100px;
