--- a/style.css
+++ b/style.css
@@ -236,8 +236,11 @@ font-size: 20px;
 }
 
 .main-container4{
-    margin-top: 100px;
-    background-color:lightpink;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 40px;
     height: 400px;
 }
 
