--- a/style.css
+++ b/style.css
@@ -121,9 +121,6 @@ main section{
     height:auto;
 }
 
-/*.sezione1 *{
-    border: 1px solid black;
-}*/
 .main-container1{
     margin-top: 100px;
     display: flex;
@@ -296,15 +293,17 @@ font-size: 20px;
     height: 400px;
 }
 
+/*
 .sezione5 *{
     border: 1px solid black;
-}
+} */
 
 .sezione5{
     display: flex;
 }
 
  .div1,.div2,.div3{
+ /*width: calc(100% /3);*/
     width:calc(100vw / 3);
     height:calc(100vh / 3);
 }
@@ -312,29 +311,62 @@ font-size: 20px;
 .div1,.div3{
     display: flex;
     flex-wrap: wrap;
+   
+}
+
+.div1 div,.div3 div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .div2{
+    background-color:rgba(245, 245, 245, 1);
+    display: flex;
+    flex-direction: column;
+    gap:50px;
+    padding: 20px;
     overflow:scroll;
+}
+
+.div2 img{
+    width: 50%;
 }
 
 .div1 div{
     width:calc(100% /2);
 }
 .div1 img{
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
 
 .div3 img{
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
-.div1 div:nth-child(odd){
-    background-color: lightpink;
+.div1 div:nth-child(1){
+    background-color: rgba(162, 211, 155, 1);
+ }
+
+ .div1 img,.div3 img{
+    display: inline-block;
+   filter:brightness(0) invert(1);
+ }
+
+.div1 div:nth-child(2){
+    background-color:rgba(97, 8, 43, 1);
+   
 }
-.div1 div:nth-child(even){
-    background-color: lightskyblue;
+
+.div1 div:nth-child(3){
+    background-color:rgba(0, 147, 206, 1);
+   
+}
+
+.div1 div:nth-child(4){
+    background-color:rgba(255, 28, 28, 1);
+    color:white;
 }
 
 
@@ -342,12 +374,24 @@ font-size: 20px;
     width:calc(100% /2);
 }
 
-.div3 div:nth-child(odd){
-    background-color: lightpink;
+.div3 div:nth-child(1){
+    background-color: rgba(213, 0, 31, 1);
+
 }
-.div3 div:nth-child(even){
-    background-color: lightskyblue;
+.div3 div:nth-child(2){
+    background-color:rgba(180, 208, 231, 1);
+   
 }
+
+.div3 div:nth-child(3){
+    background-color:rgba(13, 36, 129, 1);
+   
+}
+
+.div3 div:nth-child(4){
+    background-color:rgba(255, 216, 48, 1);
+}
+
 
 
 
