Sistemato sezione 1 del main e aggiunto animazione alla navbar

--- a/style.css
+++ b/style.css
@@ -44,7 +44,13 @@ nav{
     list-style-type: none;
 }
 
+.lista1 a:hover,.lista2 a:hover{
+ background-color:lightgray ;
+}
+
 .lista1 a,.lista2 a{
+    padding: 10px;
+    border-radius: 20px;
     text-decoration: none;
     color: black;
 }
@@ -133,7 +139,9 @@ main section{
     font-size: 30px;
 }
 
-
+#radio2{
+    margin-left: 30px;
+}
 
 .columns{
     display: flex;
@@ -148,11 +156,16 @@ main section{
    font-size: 20px; 
 }
 
-
 .column1 .icon,.column2 .icon,.column3 .icon,.row .icon{
- margin-bottom: 0px;
  display: flex;
  gap:5px;
+}
+
+.column1 hr,.column2 hr,.column3 hr{
+    width: 50px;
+    border: 1px rgb(201, 201, 201) solid;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .icon1{  /* riguarda la stilizazione solo delle teste delle tre colonne+*/
@@ -169,10 +182,10 @@ main section{
     margin-bottom: 40px;
 }
 
-.internal-padding{
+.internal-padding{  /* il contenitore che ha gli elementi delle colonne tranne l'header della colonna*/
     display: flex;
     flex-direction: column;
-    gap:10px;
+    gap:20px;
     align-items: flex-start;
     padding: 20px;
 }
