--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ font-size: 20px;
 
  .div1,.div2,.div3{
     width:calc(100vw / 3);
-    height:calc(100vh / 3);
+    height:calc(100vw / 3);
 }
 
 .div1,.div3{
